Fixed the z-index for the 4 boxes

--- a/css/override.css
+++ b/css/override.css
@@ -26,3 +26,14 @@
 .intro-table-fourth {
 	background-image: url('../img/table-4.png');
 }
+
+#about {
+	position: relative;
+	width: 100%;
+	color: white;
+	background: rgba(28, 36, 65, 0.93);
+	background: url('../img/header.jpg');
+	background-size: cover;
+	padding-bottom: 200px;
+	top: -295px;
+}
